<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/details_of_purchase"/>

        <EditText
            android:id="@+id/purchase_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_style"
            android:elevation="5dp"
            android:hint="@string/enter_a_title_for_the_purchase"
            android:maxLength="128"
            android:padding="4dp"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/purchase_details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:hint="@string/enter_a_details_for_the_purchase"
            android:inputType="textMultiLine"
            android:elevation="5dp"
            android:importantForAutofill="no" />

            <CheckBox
                android:id="@+id/complete_check_box_of_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:text="@string/purchase_is_completed" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/add_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:layout_toStartOf="@id/add_or_delete_text_view"
                android:contentDescription="@string/add_picture"
                android:src="@drawable/ic_baseline_image_search_24" />

            <TextView
                android:id="@+id/add_or_delete_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_centerInParent="true"
                android:text="@string/add_or_delete_a_picture" />

            <ImageButton
                android:id="@+id/delete_picture"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:elevation="2dp"
                android:layout_toEndOf="@+id/add_or_delete_text_view"
                android:contentDescription="@string/delete_picture"
                android:src="@drawable/ic_baseline_delete_outline_24" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/image_view_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_view_picture"
            app:srcCompat="@drawable/ic_baseline_image_192" />

    </LinearLayout>

</ScrollView>